fixed mid pics for mobile with spacing, spelling corrections

--- a/less/index.less
+++ b/less/index.less
@@ -2,5 +2,12 @@
 @import "bootstrap";
 @import "variables";
 @import "mixins";
-@import "layout";
+@import "layout"; 
 
+.navbar-expand-lg .navbar-collapse {
+           width: 100%;
+           justify-content: center !important;
+}
+
+.nav-link {
+color: @main-color #f4f4f4; }
