--- a/less/layout.less
+++ b/less/layout.less
@@ -13,7 +13,7 @@ h1, h2, h3, h4, h5 {
   }
   
   .mid-section img {
-	zoom: 70%;
+	zoom: 50%;
   }
   
   img {
