--- a/less/variables.less
+++ b/less/variables.less
@@ -2,4 +2,4 @@
 
 @main-color: #f4f4f4;
 @secondary-color: #22283B;
-@accent-color: #e0e0e0;
+@accent-color: #e71414;
